# monash-go

./: .gitignore  README.md
backend/: .env.sample  config.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
frontend/: .env.sample  CLAUDE.md
